# sirius

./: .gitignore  CMakeLists.txt  README.md  REDAME.md
example/log/: test_lock.cpp  test_log_level.cpp
recipes/macos_12.6.2_arm(m2)/: CMakeLists.txt
recipes/macos_12.6.2_m2/: CMakeLists.txt
recipes/ubuntu_1804_x86/: CMakeLists.txt
sirius/: CMakeLists.txt
sirius/log/: CMakeLists.txt  LoggerManager.cpp  LoggerManager.h  log_appender.cpp  log_appender.h  log_event.cpp  log_event.h  log_formatter.cpp  log_formatter.h  log_formatter_item.hpp  log_level.cpp  log_level.h  log_warp.cpp  log_warp.h  logger.cpp  logger.h  logger_manager.cpp  logger_manager.h
sirius/util/: none_copy.hpp
sirius/util/lock/: scoped_lock.hpp  spin_lock.hpp
test/: CMakeLists.txt
test/log/: test.log.cpp  test_lock.cpp  test_log_level.cpp
